Añadiendo datos a la mongoDB y Avances en renderizacion de actividades dinamicas

--- a/config/configDev.json
+++ b/config/configDev.json
@@ -1,5 +1,6 @@
 {
 	"statics" : "public",
+	"URIMongo" : "mongodb://localhost/rememberHelp",
 	"gulp":{
 		"srcStyle": "public/stylus/styles.styl",
 		"srcStylus": "public/stylus/**/*.styl",
