--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -7,6 +7,18 @@
     "extends": "eslint:recommended",
     "rules": {
         "no-console": 1,
+        "arrow-spacing": 1,
+        "no-multi-spaces": 2,
+        "no-extra-parens": 2,
+        "no-empty": 2,
+        "no-multiple-empty-lines": [
+            1,
+            {"max": 2}
+        ],
+        "camelcase": [
+            2,
+            {"properties": "always"}
+        ],
         "indent": [
             1,
             "tab"
