--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -8,15 +8,16 @@
     "rules": {
         "no-console": 1,
         "arrow-spacing": 1,
-        "no-multi-spaces": 2,
-        "no-extra-parens": 2,
-        "no-empty": 2,
+        "no-multi-spaces": 1,
+        "no-unused-vars": 1,
+        "no-extra-parens": 1,
+        "no-empty": 1,
         "no-multiple-empty-lines": [
             1,
-            {"max": 2}
+            {"max": 1}
         ],
         "camelcase": [
-            2,
+            1,
             {"properties": "always"}
         ],
         "indent": [
