--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dev": "npm run eslint && supervisor server"
   },
   "engines": {
-  "node": "4.2.4",
-  "npm": "2.14.12"
-},
+    "node": "4.2.4",
+    "npm": "2.14.12"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carlosturnerbenites/rememberHelp.git"
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/carlosturnerbenites/rememberHelp#readme",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.4"
   },
