Refactorizacion de estilos y Avances en validadcion de actividades completadas

--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -10,7 +10,8 @@
 		"Text": true,
 		"Modal": true,
 		"webkitSpeechRecognition": true,
-		"confirmActivityWindow": true
+		"confirmActivityWindow": true,
+		"detailActivityActive": true
 		},
 	"extends": "eslint:recommended",
 	"rules": {
