--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-stylus": "^2.3.0",
     "gulp-uglify": "^1.5.2",
-    "nib": "^1.1.0"
+    "nib": "^1.1.0",
+    "node-schedule": "^1.0.0"
   }
 }
