--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
   "homepage": "https://github.com/carlosturnerbenites/rememberHelp#readme",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.4"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "body-parser": "^1.15.0",
     "colors": "^1.1.2",
+    "cookie-parser": "^1.4.1",
     "gulp-eslint": "^2.0.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
