Avance en estadisticas, manipulacion de Colleciones y refactor de css

--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -9,6 +9,7 @@
 		"Voice": true,
 		"Text": true,
 		"Modal": true,
+		"ajax": true,
 		"webkitSpeechRecognition": true,
 		"confirmActivityWindow": true,
 		"detailActivityActive": true
