--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "format-error": "^1.0.0",
     "mongoose": "^4.4.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
