--- a/package.json
+++ b/package.json
@@ -1,48 +1,45 @@
 {
-  "name": "remember-help",
-  "version": "1.0.0",
-  "description": "Aplicación para la estimulación cognitiva de los niños a través del apoyo en el recordatorio de rutinas diarias",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint  ./public/**/*.js ./*.js ./**/*.js",
-    "start": "node server.js",
-    "dev": "npm run eslint && supervisor server"
-  },
-  "engines": {
-    "node": "4.2.4",
-    "npm": "2.14.12"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carlosturnerbenites/rememberHelp.git"
-  },
-  "author": "Carlos Alonso Turner Benites",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/carlosturnerbenites/rememberHelp/issues"
-  },
-  "homepage": "https://github.com/carlosturnerbenites/rememberHelp#readme",
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "connect-mongo": "^1.1.0",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "format-error": "^1.0.0",
-    "mongoose": "^4.4.4",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "body-parser": "^1.15.0",
-    "colors": "^1.1.2",
-    "cookie-parser": "^1.4.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-stylus": "^2.3.0",
-    "gulp-uglify": "^1.5.2",
-    "nib": "^1.1.0",
-    "node-schedule": "^1.0.0"
-  }
+	"name": "remember-help",
+	"version": "1.0.0",
+	"description": "Aplicación para la estimulación cognitiva de los niños a través del apoyo en el recordatorio de rutinas diarias",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"eslint": "eslint  ./public/**/*.js ./*.js ./**/*.js",
+		"start": "node server.js",
+		"dev": "npm run eslint && supervisor server"
+	},
+	"engines": {
+		"node": "4.2.4",
+		"npm": "2.14.12"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/carlosturnerbenites/rememberHelp.git"
+	},
+	"author": "Carlos Alonso Turner Benites",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/carlosturnerbenites/rememberHelp/issues"
+	},
+	"homepage": "https://github.com/carlosturnerbenites/rememberHelp#readme",
+	"dependencies": {
+		"connect-mongo": "^1.1.0",
+		"express": "^4.13.4",
+		"mongoose": "^4.4.4",
+		"passport": "^0.3.2",
+		"passport-local": "^1.0.0"
+	},
+	"devDependencies": {
+		"body-parser": "^1.15.0",
+		"cookie-parser": "^1.4.1",
+		"express-favicon": "^1.0.1",
+		"express-session": "^1.13.0",
+		"gulp-notify": "^2.2.0",
+		"gulp-plumber": "^1.1.0",
+		"gulp-stylus": "^2.3.0",
+		"gulp-uglify": "^1.5.2",
+		"nib": "^1.1.0",
+		"node-schedule": "^1.0.0"
+	}
 }
