--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -19,7 +19,7 @@
 		"no-console": 1,
 		"arrow-spacing": 1,
 		"no-multi-spaces": 1,
-		"no-unused-vars": 1,
+		"no-unused-vars": [1, { "vars": "all", "args": "after-used" }],
 		"no-extra-parens": 1,
 		"no-spaced-func": 1,
 		"no-trailing-spaces": 1,
