Añadiendo Validaciones a formularios Frontend y a procesos Backend de usuarios

--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -12,6 +12,7 @@
 		"Modal": true,
 		"response": true,
 		"Text": true,
+		"Validator": true,
 		"Voice": true,
 		"webkitSpeechRecognition": true
 		},
