refactor Backend general y Mejorar en errores de Validator

--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -10,6 +10,7 @@
 		"detailActivityActive": true,
 		"google": true,
 		"Modal": true,
+		"markdown": true,
 		"response": true,
 		"Text": true,
 		"Validator": true,
