Añaiendo campo de hora (hour) a esquema de 'histories', Añadiendo notificaciones custom y refactor de estilos y templates

--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -14,6 +14,7 @@
 		"response": true,
 		"Text": true,
 		"Validator": true,
+		"NotificationC": true,
 		"Voice": true,
 		"webkitSpeechRecognition": true
 		},
