--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -15,6 +15,7 @@
 		"Text": true,
 		"Validator": true,
 		"NotificationC": true,
+		"RangeTolerance": true,
 		"Voice": true,
 		"webkitSpeechRecognition": true
 		},
@@ -23,7 +24,7 @@
 		"no-console": 1,
 		"arrow-spacing": 1,
 		"no-multi-spaces": 1,
-		"no-unused-vars": [1, { "vars": "all", "args": "after-used" }],
+		"no-unused-vars": [1, { "vars": "all", "args": "all" }],
 		"no-extra-parens": 1,
 		"no-spaced-func": 1,
 		"no-trailing-spaces": 1,
