--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
     "mongoose": "^4.4.4",
+    "nodemailer-markdown": "^1.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   },
@@ -42,6 +43,7 @@
     "log": "^1.4.0",
     "multer": "^1.1.0",
     "nib": "^1.1.0",
+    "nodemailer": "^2.3.2",
     "q": "^1.4.1"
   }
 }
