--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express-favicon": "^1.0.1",
     "express-session": "^1.13.0",
@@ -44,6 +45,7 @@
     "multer": "^1.1.0",
     "nib": "^1.1.0",
     "nodemailer": "^2.3.2",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "winston": "^2.2.0"
   }
 }
