--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express-favicon": "^1.0.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.13.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
