--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "babelify": "^7.3.0",
     "body-parser": "^1.15.0",
+    "browserify": "^13.0.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express-favicon": "^1.0.1",
     "express-flash": "0.0.2",
     "express-session": "^1.13.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-stylus": "^2.3.0",
