Implementacion de es5 completa. Pero por cuestiones de testeo se volvera a es4

--- a/config/configDev.json
+++ b/config/configDev.json
@@ -2,8 +2,9 @@
 	"statics" : "public",
 	"URIMongo" : "mongodb://localhost/rememberHelp",
 	"browserify":{
-		"src": "src/js/**/*.js",
-		"dest" :"public/js"
+		"path": "./src/js/",
+		"src": "./src/js/**/*.js",
+		"dest" :"./public/js/"
 	},
 	"gulp":{
 		"srcStyle": "src/stylus/styles.styl",
