--- a/src/js/.eslintrc.json
+++ b/src/js/.eslintrc.json
@@ -4,6 +4,12 @@
 		"commonjs": true,
 		"es6": true
 	},
+		"ecmaFeatures" : {
+		"modules" :true
+	},
+	"parserOptions": {
+		"sourceType": "module"
+	},
 	"globals" :{
 		"ajax": true,
 		"confirmActivityWindow": true,
