--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,27 @@
 		"no-empty": 1,
 		"space-in-parens": [
 			1,
-			"never"
+			"always"
+		],
+		"comma-spacing": [
+			1,
+			{ "before": false, "after": true }
+		],
+		"quote-props": [
+			1,
+			"always"
+		],
+		"array-bracket-spacing": [
+			1,
+			"always"
+		],
+		"object-curly-spacing": [
+			1,
+			"always"
+		],
+		"key-spacing":[
+			1,
+			{ "beforeColon": true }
 		],
 		"spaced-comment": [
 			1,
