--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
+    "jade": "^1.11.0",
     "mongoose": "^4.4.4",
     "nodemailer-markdown": "^1.0.0",
     "passport": "^0.3.2",
@@ -49,7 +50,9 @@
     "multer": "^1.1.0",
     "nib": "^1.1.0",
     "nodemailer": "^2.3.2",
+    "pug": "^0.1.0",
     "q": "^1.4.1",
+    "stylus": "^0.54.5",
     "winston": "^2.2.0"
   }
 }
