--- a/public/js/.eslintrc.json
+++ b/public/js/.eslintrc.json
@@ -29,10 +29,10 @@
 		},
 	"extends": "eslint:recommended",
 	"rules": {
-		"no-console": 1,
+"no-console": 1,
 		"arrow-spacing": 1,
 		"no-multi-spaces": 1,
-		"no-unused-vars": [1, { "vars": "all", "args": "all" }],
+		"no-unused-vars": 1,
 		"no-extra-parens": 1,
 		"no-spaced-func": 1,
 		"no-trailing-spaces": 1,
@@ -41,7 +41,27 @@
 		"no-empty": 1,
 		"space-in-parens": [
 			1,
-			"never"
+			"always"
+		],
+		"comma-spacing": [
+			1,
+			{ "before": false, "after": true }
+		],
+		"quote-props": [
+			1,
+			"always"
+		],
+		"array-bracket-spacing": [
+			1,
+			"always"
+		],
+		"object-curly-spacing": [
+			1,
+			"always"
+		],
+		"key-spacing":[
+			1,
+			{ "beforeColon": true }
 		],
 		"spaced-comment": [
 			1,
@@ -60,7 +80,7 @@
 			"tab"
 		],
 		"linebreak-style": [
-			2,
+			1,
 			"unix"
 		],
 		"quotes": [
